Azure_version/part-2-use-cases/optional/kubernetes/4-add-tls-ingress/azure-vote-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - azure-vote-front
    secretName: ingress-nginx
  rules:
  - host: azure-vote-front
    http:
      paths:
      - path: /vote(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
